upd product details
