# src/controllers/v3/openapi.yaml
@@ -590,6 +590,11 @@ components:
                     type: string
                 name:
                     type: string
+                type:
+                    type: string
+                    enum:
+                        - app
+                        - service
                 description:
                     type: string
                 gatewayId:
@@ -613,6 +618,7 @@ components:
             example:
                 name: my-new-product
                 appId: '000000000000'
+                type: service
                 environments:
                     -
                         name: dev
