# src/controllers/v3/types.ts
@@ -275,6 +275,7 @@ export interface Application {
  * @example {
  *   "name": "my-new-product",
  *   "appId": "000000000000",
+ *   "type": "service",
  *   "environments": [
  *     {
  *       "name": "dev",
@@ -289,6 +290,7 @@ export interface Application {
 export interface Product {
   appId?: string; // Primary Key
   name?: string;
+  type?: "app" | "service";
   description?: string;
   gatewayId?: string;
   openapiSpecs?: string[];
